--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
+        <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">-->
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
         <link rel="stylesheet" href="./css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,20 +23,22 @@
             </nav>
         </header>
 
-        <section>
-            <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-            <div>En plein centre ville ou en pleine nature</div>
-            <div id="cont_search">
-                <div class="elem_search"><i class="fa-solid fa-location-dot"></i></div>
+        <section id="top">
+            <h1 class="elem_top">Trouvez votre hébergement pour des vacances de rêve</h1>
+            <p class="elem_top">En plein centre ville ou en pleine nature</p>
+            <div class="elem_top" id="cont_search">
+                <div class="elem_search"><i class="fas fa-location-dot"></i></div>
                 <div class="elem_search"></div>
                 <div class="elem_search"></div>
-            </div>    
-            <p>! / Marseille, France / Rechercher</p>
-            <p>Filtres : Économique / Familial / Romantique / Animaux autorisés</p>
-            <div id="info">
-                <p class="elem_info"><i class="fa-solid fa-info"></i></p>
-                <p>Plus de 500 logements sont disponibles dans cette ville</p>
             </div>
+            <div class="elem_top" id="cont_filter">
+                <p class="elem_filter">Filtres</p>
+                <p class="elem_filter"><i class="fas fa-money-bill-wave"></i>Économique</p>
+                <p class="elem_filter"><i class="fas fa-child"></i>Familial</p>
+                <p class="elem_filter"><i class="fas fa-heart"></i>Romantique</p>
+                <p class="elem_filter"><i class="fas fa-dog"></i>Animaux autorisés</p>
+            </div>
+            <p class="elem_top" id="info"><i class="fa fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
         </section>
 
         <section>
@@ -49,6 +52,7 @@
                     <p class="titre_hebergement">Auberge la Cannebière</p>
                     <p class="prix_hebergement">Nuit à partir de <em>25€</em></p>
                     <!--4 images étoile bleue + 1 image étoile grise-->
+                    <p class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i></p>
                 </div>
 
                 <div class="hebergement">
@@ -56,6 +60,7 @@
                     <p class="titre_hebergement">Hôtel du Port</p>
                     <p class="prix_hebergement">Nuit à partir de 52<em>€</em></p>
                     <!--5 images étoile bleue-->
+                    <p class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i></p>
                 </div>
 
                 <div class="hebergement">
@@ -63,6 +68,7 @@
                     <p class="titre_hebergement">Hôtel Les mouettes</p>
                     <p class="prix_hebergement">Nuit à partir de 76<em>€</em></p>
                     <!--4 images étoile bleue + 1 image étoile grise-->
+                    <p class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i></p>
                 </div>
 
                 <div class="hebergement">
@@ -70,6 +76,7 @@
                     <p class="titre_hebergement">Hôtel de la mer</p>
                     <p class="prix_hebergement">Nuit à partir de 46<em>€</em></p>
                     <!--3 images étoile bleue + 2 images étoile grise-->
+                    <p class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i></p>
                 </div>
 
                 <div class="hebergement">
@@ -77,6 +84,7 @@
                     <p class="titre_hebergement">Auberge le Panier</p>
                     <p class="prix_hebergement">Nuit à partir de <em>23€</em></p>
                     <!--4 images étoile bleue + 1 image étoile grise-->
+                    <p class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i></p>
                 </div>
 
                 <div class="hebergement">
@@ -84,6 +92,7 @@
                     <p class="titre_hebergement">Hôtel chez Amina</p>
                     <p class="prix_hebergement">Nuit à partir de 96<em>€</em></p>
                     <!--5 images étoile bleue-->
+                    <p class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i></p>
                 </div>
 
                 <div><a href="#">Afficher plus</a></div>
@@ -92,15 +101,14 @@
 
             <div id="populaires">
 
-                <h1>Les plus populaires</h1>
-
-                <div class="populaire"></div>
+                <h1>Les plus populaires<i class="fas fa-arrow-trend-up"></i></h1>
 
                 <div class="populaire">
                     <img src="./images/hebergements/hotel_soleil_matin.jpg" class="img_populaire" alt="hotel_le_soleil_du_matin">
                     <p class="titre_hebergement">Hôtel Le soleil du matin</p>
                     <p class="prix_hebergement">Nuit à partir de 128<em>€</em></p>
                     <!--5 images étoile bleue-->
+                    <p class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i></p>
                 </div>
 
                 <div class="populaire">
@@ -108,6 +116,7 @@
                     <p class="titre_hebergement">Au coeur de l'eau Chambre d'hôtes</p>
                     <p class="prix_hebergement">Nuit à partir de 71<em>€</em></p>
                     <!--4 images étoile bleue + 1 image étoile grise-->
+                    <p class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i></p>
                 </div>
 
                 <div class="populaire">
@@ -115,6 +124,7 @@
                     <p class="titre_hebergement">Hôtel Tout bleu et Blanc</p>
                     <p class="prix_hebergement">Nuit à partir de 68<em>€</em></p>
                     <!--4 images étoile bleue + 1 image étoile grise-->
+                    <p class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i></p>
                 </div>
 
             </div>
@@ -123,30 +133,30 @@
 
         <section id="activites">
 
-            <h1 class="activite">Activités à Marseille</h1>
+            <h1>Activités à Marseille</h1>
 
             <div class="activite">
-                <p><img src="./images/activites/vieux_port.jpg" class="img_activites" alt="vieux_port"></p>
+                <img src="./images/activites/vieux_port.jpg" class="img_activite" alt="vieux_port">
                 <p class="titre_activite">Vieux Port</p>
             </div>
             <div class="activite">
-                <p><img src="./images/activites/fort_pomegues.jpg" class="img_activites" alt="fort_de_pomegues"></p>
+                <img src="./images/activites/fort_pomegues.jpg" class="img_activite" alt="fort_de_pomegues">
                 <p class="titre_activite">Fort de Pomègues</p>
             </div>
             <div class="activite">
-                <p><img src="./images/activites/iles_frioul.jpg" class="img_activites" alt="iles_du_frioul"></p>
-                <p class="titre_activite">îles du Frioul</p>
+                <img src="./images/activites/iles_frioul.jpg" class="img_activite" alt="iles_du_frioul">
+                <p class="titre_activite">Îles du Frioul</p>
             </div>
             <div class="activite">
-                <p><img src="./images/activites/parc_national_calanques.jpg" class="img_activites" alt="parc_national_des_calanques"></p>
+                <img src="./images/activites/parc_national_calanques.jpg" class="img_activite" alt="parc_national_des_calanques">
                 <p class="titre_activite">Parc National des Calanques</p>
             </div>
             <div class="activite">
-                <p><img src="./images/activites/nddlg.jpg" class="img_activites" alt="notre-dame-de-la-garde"></p>
+                <img src="./images/activites/nddlg.jpg" class="img_activite" alt="notre-dame-de-la-garde">
                 <p class="titre_activite">Notre-Dame-de-la-Garde</p>
             </div>
             <div class="activite">
-                <p><img src="./images/activites/parc_longchamp.jpg" class="img_activites" alt="parc_longchamp"></p>
+                <img src="./images/activites/parc_longchamp.jpg" class="img_activite" alt="parc_longchamp">
                 <p class="titre_activite">Parc Longchamp</p>
             </div>
 
