--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
 
         <header>
-            <p><img src="./images/logo/Booki.png" class="logo" alt="booki_logo"></p>
+            <div><img src="./images/logo/Booki.png" class="logo" alt="booki_logo"></div>
             <nav>
                 <div class="puce_menu"><a href="#hebergements">Hébergements</a></div>
                 <div class="puce_menu"><a href="#activites">Activités</a></div>
@@ -25,74 +25,80 @@
 
         <section id="top">
             <h1 class="elem_top">Trouvez votre hébergement pour des vacances de rêve</h1>
-            <p class="elem_top">En plein centre ville ou en pleine nature</p>
+            <div class="elem_top">En plein centre ville ou en pleine nature</div>
             <div class="elem_top" id="cont_search">
                 <div class="elem_search"><i class="fas fa-location-dot"></i></div>
                 <div class="elem_search"></div>
                 <div class="elem_search"></div>
             </div>
             <div class="elem_top" id="cont_filter">
-                <p class="elem_filter">Filtres</p>
-                <p class="elem_filter"><i class="fas fa-money-bill-wave"></i>Économique</p>
-                <p class="elem_filter"><i class="fas fa-child"></i>Familial</p>
-                <p class="elem_filter"><i class="fas fa-heart"></i>Romantique</p>
-                <p class="elem_filter"><i class="fas fa-dog"></i>Animaux autorisés</p>
+                <div class="elem_filter">Filtres</div>
+                <div class="elem_filter"><i class="fas fa-money-bill-wave"></i>Économique</div>
+                <div class="elem_filter"><i class="fas fa-child"></i>Familial</div>
+                <div class="elem_filter"><i class="fas fa-heart"></i>Romantique</div>
+                <div class="elem_filter"><i class="fas fa-dog"></i>Animaux autorisés</div>
             </div>
-            <p class="elem_top" id="info"><i class="fa fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
+            <div class="elem_top" id="info"><i class="fa fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</div>
         </section>
 
-        <section>
+        <section id="places">
 
             <div id="hebergements">
 
-                <h1>Hébergements à Marseille</h1>
+                <div class="titre_section">Hébergements à Marseille</div>
 
                 <div class="hebergement">
                     <img src="./images/hebergements/auberge_cannebiere.jpg" class="img_hebergement" alt="auberge_la_cannebiere">
-                    <p class="titre_hebergement">Auberge la Cannebière</p>
-                    <p class="prix_hebergement">Nuit à partir de <em>25€</em></p>
-                    <!--4 images étoile bleue + 1 image étoile grise-->
-                    <p class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i></p>
+                    <div class="info_hebergement">
+                        <div class="titre_hebergement">Auberge la Cannebière</div>
+                        <div class="prix_hebergement">Nuit à partir de<strong>&nbsp;25€</strong></div>
+                        <div class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star grey_star"></i></div>
+                    </div>
                 </div>
 
                 <div class="hebergement">
                     <img src="./images/hebergements/hotel_port.jpg" class="img_hebergement" alt="hotel_du_port">
-                    <p class="titre_hebergement">Hôtel du Port</p>
-                    <p class="prix_hebergement">Nuit à partir de 52<em>€</em></p>
-                    <!--5 images étoile bleue-->
-                    <p class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i></p>
+                    <div class="info_hebergement">
+                        <div class="titre_hebergement">Hôtel du Port</div>
+                        <div class="prix_hebergement">Nuit à partir de 52<strong>€</strong></div>
+                        <div class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i></div>
+                    </div>
                 </div>
 
                 <div class="hebergement">
                     <img src="./images/hebergements/hotel_mouettes.jpg" class="img_hebergement" alt="hotel_les_mouettes">
-                    <p class="titre_hebergement">Hôtel Les mouettes</p>
-                    <p class="prix_hebergement">Nuit à partir de 76<em>€</em></p>
-                    <!--4 images étoile bleue + 1 image étoile grise-->
-                    <p class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i></p>
+                    <div class="info_hebergement">
+                        <div class="titre_hebergement">Hôtel Les mouettes</div>
+                        <div class="prix_hebergement">Nuit à partir de 76<strong>€</strong></div>
+                        <div class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star grey_star"></i></div>
+                    </div>
                 </div>
 
                 <div class="hebergement">
                     <img src="./images/hebergements/hotel_de_la_mer.jpg" class="img_hebergement" alt="hotel_de_la_mer">
-                    <p class="titre_hebergement">Hôtel de la mer</p>
-                    <p class="prix_hebergement">Nuit à partir de 46<em>€</em></p>
-                    <!--3 images étoile bleue + 2 images étoile grise-->
-                    <p class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i></p>
+                    <div class="info_hebergement">
+                        <div class="titre_hebergement">Hôtel de la mer</div>
+                        <div class="prix_hebergement">Nuit à partir de 46<strong>€</strong></div>
+                        <div class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star grey_star"></i><i class="fas fa-star grey_star"></i></div>
+                    </div>
                 </div>
 
                 <div class="hebergement">
                     <img src="./images/hebergements/auberge_panier.jpg" class="img_hebergement" alt="auberge_le_panier">
-                    <p class="titre_hebergement">Auberge le Panier</p>
-                    <p class="prix_hebergement">Nuit à partir de <em>23€</em></p>
-                    <!--4 images étoile bleue + 1 image étoile grise-->
-                    <p class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i></p>
+                    <div class="info_hebergement">
+                        <div class="titre_hebergement">Auberge le Panier</div>
+                        <div class="prix_hebergement">Nuit à partir de<strong>&nbsp;23€</strong></div>
+                        <div class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star grey_star"></i></div>
+                    </div>
                 </div>
 
                 <div class="hebergement">
                     <img src="./images/hebergements/hotel_chez_amina.jpg" class="img_hebergement" alt="hotel_chez_amina">
-                    <p class="titre_hebergement">Hôtel chez Amina</p>
-                    <p class="prix_hebergement">Nuit à partir de 96<em>€</em></p>
-                    <!--5 images étoile bleue-->
-                    <p class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i></p>
+                    <div class="info_hebergement">
+                        <div class="titre_hebergement">Hôtel chez Amina</div>
+                        <div class="prix_hebergement">Nuit à partir de 96<strong>€</strong></div>
+                        <div class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i></div>
+                    </div>
                 </div>
 
                 <div><a href="#">Afficher plus</a></div>
@@ -101,30 +107,33 @@
 
             <div id="populaires">
 
-                <h1>Les plus populaires<i class="fas fa-arrow-trend-up"></i></h1>
+                <div class="titre_section">Les plus populaires<i class="fas fa-chart-line"></i></div>
 
                 <div class="populaire">
                     <img src="./images/hebergements/hotel_soleil_matin.jpg" class="img_populaire" alt="hotel_le_soleil_du_matin">
-                    <p class="titre_hebergement">Hôtel Le soleil du matin</p>
-                    <p class="prix_hebergement">Nuit à partir de 128<em>€</em></p>
-                    <!--5 images étoile bleue-->
-                    <p class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i></p>
+                    <div class="info_hebergement">
+                        <div class="titre_hebergement">Hôtel Le soleil du matin</div>
+                        <div class="prix_hebergement">Nuit à partir de 128<strong>€</strong></div>
+                        <div class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i></div>
+                    </div>
                 </div>
 
                 <div class="populaire">
                     <img src="./images/hebergements/coeur_eau_chambres_hotes.jpg" class="img_populaire" alt="au_coeur_de_l_eau_chambre_d_hotes">
-                    <p class="titre_hebergement">Au coeur de l'eau Chambre d'hôtes</p>
-                    <p class="prix_hebergement">Nuit à partir de 71<em>€</em></p>
-                    <!--4 images étoile bleue + 1 image étoile grise-->
-                    <p class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i></p>
+                    <div class="info_hebergement">
+                        <div class="titre_hebergement">Au coeur de l'eau Chambre d'hôtes</div>
+                        <div class="prix_hebergement">Nuit à partir de 71<strong>€</strong></div>
+                        <div class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star grey_star"></i></div>
+                    </div>
                 </div>
 
                 <div class="populaire">
                     <img src="./images/hebergements/hotel_tout_bleu_blanc.jpg" class="img_populaire" alt="hotel_tout_bleu_et_blanc">
-                    <p class="titre_hebergement">Hôtel Tout bleu et Blanc</p>
-                    <p class="prix_hebergement">Nuit à partir de 68<em>€</em></p>
-                    <!--4 images étoile bleue + 1 image étoile grise-->
-                    <p class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i></p>
+                    <div class="info_hebergement">
+                        <div class="titre_hebergement">Hôtel Tout bleu et Blanc</div>
+                        <div class="prix_hebergement">Nuit à partir de 68<strong>€</strong></div>
+                        <div class="rank"><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star blue_star"></i><i class="fas fa-star grey_star"></i></div>
+                    </div>
                 </div>
 
             </div>
@@ -133,31 +142,41 @@
 
         <section id="activites">
 
-            <h1>Activités à Marseille</h1>
+            <div class="titre_section">Activités à Marseille</div>
 
-            <div class="activite">
-                <img src="./images/activites/vieux_port.jpg" class="img_activite" alt="vieux_port">
-                <p class="titre_activite">Vieux Port</p>
+            <!--créer une sous-div pour chaque colonne qui contient plus d'une carte-->
+
+            <div class="activite_column">
+                <div class="activite">
+                    <img src="./images/activites/vieux_port.jpg" class="img_activite" alt="vieux_port">
+                    <div class="titre_activite">Vieux Port</div>
+                </div>
             </div>
-            <div class="activite">
-                <img src="./images/activites/fort_pomegues.jpg" class="img_activite" alt="fort_de_pomegues">
-                <p class="titre_activite">Fort de Pomègues</p>
+            <div class="activite_column">
+                <div class="activite">
+                    <img src="./images/activites/fort_pomegues.jpg" class="img_activite" alt="fort_de_pomegues">
+                    <div class="titre_activite">Fort de Pomègues</div>
+                </div>
+                <div class="activite">
+                    <img src="./images/activites/iles_frioul.jpg" class="img_activite" alt="iles_du_frioul">
+                    <div class="titre_activite">Îles du Frioul</div>
+                </div>
             </div>
-            <div class="activite">
-                <img src="./images/activites/iles_frioul.jpg" class="img_activite" alt="iles_du_frioul">
-                <p class="titre_activite">Îles du Frioul</p>
+            <div class="activite_column">
+                <div class="activite">
+                    <img src="./images/activites/parc_national_calanques.jpg" class="img_activite" alt="parc_national_des_calanques">
+                    <div class="titre_activite">Parc National des Calanques</div>
+                </div>
             </div>
-            <div class="activite">
-                <img src="./images/activites/parc_national_calanques.jpg" class="img_activite" alt="parc_national_des_calanques">
-                <p class="titre_activite">Parc National des Calanques</p>
-            </div>
-            <div class="activite">
-                <img src="./images/activites/nddlg.jpg" class="img_activite" alt="notre-dame-de-la-garde">
-                <p class="titre_activite">Notre-Dame-de-la-Garde</p>
-            </div>
-            <div class="activite">
-                <img src="./images/activites/parc_longchamp.jpg" class="img_activite" alt="parc_longchamp">
-                <p class="titre_activite">Parc Longchamp</p>
+            <div class="activite_column">
+                <div class="activite">
+                    <img src="./images/activites/nddlg.jpg" class="img_activite" alt="notre-dame-de-la-garde">
+                    <div class="titre_activite">Notre-Dame-de-la-Garde</div>
+                </div>
+                <div class="activite">
+                    <img src="./images/activites/parc_longchamp.jpg" class="img_activite" alt="parc_longchamp">
+                    <div class="titre_activite">Parc Longchamp</div>
+                </div>
             </div>
 
         </section>
