--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </form>
             </div>
             <div class="elem_top" id="filters">
-                <div>Filtres</div>
+                <div class="filter_title">Filtres</div>
                 <div class="filter">
                     <div class="filter_icon"><i class="fas fa-money-bill-wave"></i></div>
                     <div>Économique</div>
@@ -164,8 +164,6 @@
         <section id="activites">
 
             <div class="titre_section">Activités à Marseille</div>
-
-            <!--créer une sous-div pour chaque colonne qui contient plus d'une carte-->
 
             <div class="activite_column">
                 <a href="#"><div class="activite">
