--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
             <div class="logo"><img src="./images/logo/Booki.png" alt="booki_logo"></div>
             <nav>
-                <a href="#hebergements"><div class="puce_menu">Hébergements</div></a>
+                <a href="#hebergements"><div class="puce_menu puce_menu--blue">Hébergements</div></a>
                 <a href="#activites"><div class="puce_menu">Activités</div></a>
             </nav>
         </header>
