debug rotate + map marker

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="elem_top" id="title_top">Trouvez votre hébergement pour des vacances de rêve</div>
             <div class="elem_top">En plein centre ville ou en pleine nature</div>
             <div class="elem_top" id="search">
-                <div class="search_icon"><i class="fas fa-map-marker"></i></div>
+                <div class="search_icon"><i class="fas fa-map-marker-alt"></i></div>
                 <form method="post" action="#">
                     <div class="search_input"><input type="text" name="city" id="city" placeholder="Marseille, France"></div>
                     <div class="button" id="rechercher"><button type="submit">Rechercher</button></div>
@@ -163,15 +163,15 @@
 
         <section id="activites">
 
-            <div class="titre_section">Activités à Marseille</div>
+            <div class="titre_section" id="titre_section_activites">Activités à Marseille</div>
 
-            <div class="activite_column">
+            <div class="activite_column" id="activite_column_1">
                 <a href="#"><div class="activite">
                     <img src="./images/activites/vieux_port.jpg" class="img_activite" alt="vieux_port">
                     <div class="titre_activite">Vieux Port</div>
                 </div></a>
             </div>
-            <div class="activite_column">
+            <div class="activite_column" id="activite_column_2">
                 <a href="#"><div class="activite" id="pomegues">
                     <img src="./images/activites/fort_pomegues.jpg" class="img_activite" alt="fort_de_pomegues">
                     <div class="titre_activite">Fort de Pomègues</div>
@@ -181,13 +181,13 @@
                     <div class="titre_activite">Îles du Frioul</div>
                 </div></a>
             </div>
-            <div class="activite_column">
+            <div class="activite_column" id="activite_column_3">
                 <a href="#"><div class="activite">
                     <img src="./images/activites/parc_national_calanques.jpg" class="img_activite" alt="parc_national_des_calanques">
                     <div class="titre_activite">Parc National des Calanques</div>
                 </div></a>
             </div>
-            <div class="activite_column">
+            <div class="activite_column" id="activite_column_4">
                 <a href="#"><div class="activite" id="nddlg">
                     <img src="./images/activites/nddlg.jpg" class="img_activite" alt="notre-dame-de-la-garde">
                     <div class="titre_activite">Notre-Dame-de-la-Garde</div>
